--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dependencies": {
         "fs": "^0.0.1-security",
         "inquirer": "^9.1.5",
-        "jest": "^29.5.0",
         "node": "^19.8.1"
+    },
+    "devDependencies": {
+        "jest": "^29.5.0"
     }
 }
